@@ -1,35 +1,55 @@
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Comparator;
-import java.util.LinkedList;
 import java.util.List;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
-public class Consultas {
-    private List<RegistroDoTempo> registros;
 
-    public Consultas(Repository rep){
-        registros = new LinkedList<>();
-        registros = (List<RegistroDoTempo>) rep.getTodos();
+public class Consultas implements IStrategy {
+    private Repository repository;
+    private Predicate<RegistroDoTempo> consultaPadrao;
+
+    public Consultas(Repository repository){
+        consultaPadrao = r -> r.getTempMaxima() > 30;
+        this.repository=repository;
     }
 
     public List<String> datasEmQueChouveuMaisDe(double milimetros){
-        List<String> lista = registros.stream()
-                        .filter(r->r.getPrecipitacao() > milimetros)
-                        .map(r->r.getDia()+"/"+r.getMes()+"/"+r.getAno())
-                        .toList();
-        return lista;
+        return repository.getTodos()
+               .stream()
+               .filter(r->r.getPrecipitacao() > milimetros)
+               .map(r->r.getDia()+"/"+r.getMes()+"/"+r.getAno())
+               .collect(Collectors.toList());
     }
 
     public String diaQueMaisChoveuNoAno(int ano){
-        RegistroDoTempo registro = registros
-        .stream()
-        .filter(reg->reg.getAno() == ano)
-        .max(Comparator.comparing(RegistroDoTempo::getPrecipitacao))
-        .orElseThrow(IllegalArgumentException::new);
-        String resp = registro.getDia()+"/"+registro.getMes()+"/"+registro.getAno()+", "+registro.getPrecipitacao();
-        return resp;
+        List<RegistroDoTempo> registrosAno = repository.getTodos()
+            .stream()
+            .filter(reg->reg.getAno()==ano)
+            .collect(Collectors.toList());
+
+        if (registrosAno.isEmpty()) {
+            throw new IllegalArgumentException("Nenhum registro encontrado para o ano especificado."); 
+        }
+
+        RegistroDoTempo registro = registrosAno
+            .stream()
+            .max(Comparator.comparing(RegistroDoTempo::getPrecipitacao))
+            .orElseThrow(IllegalArgumentException::new);
+
+        return registro.getDia() + "/" + registro.getMes() + "/" + registro.getAno() + ", " + registro.getPrecipitacao();
     }
+    
+    @Override
+    public List<Data> diasEmQue() {
+        return repository.getTodos()
+                         .stream()
+                         .filter(consultaPadrao)
+                         .map(reg -> new Data(reg.getDia(), reg.getMes(), reg.getAno()))
+                         .collect(Collectors.toList());
+    }
+
+    public void alteraConsultaPadrao(Predicate<RegistroDoTempo> consulta)   {
+        consultaPadrao=consulta;
+    }
+
 }
